--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 streamlit
 pandas
 gspread
-oauth2client
+google-auth
+google-api-python-client
+qrcode
+PyPDF2
+reportlab
+arabic_reshaper
+python-bidi
+openpyxl
